Fix color contrast of dateline styles
Gotta remember those Radix UI color rules

--- a/src/sass/components.scss
+++ b/src/sass/components.scss
@@ -14,7 +14,7 @@
     }
 }
 .dateline {
-    color: var(--color-gray-10);
+    color: var(--color-gray-11);
     text-transform: uppercase;
     font-size: 0.8em;
     font-weight: bold;
